# ITKIOFactoryRegistrationTest

./: CMakeLists.txt  README.md  itkInstantiateFactoryObjectTestHelper.hxx  itkStringifyType.hxx
App/: App.cpp  CMakeLists.txt
AppHelloPlugin/: AppHelloPlugin.cpp  AppHelloPlugin.h  CMakeLists.txt
HackForIOList/: CMakeLists.txt
ITKIODisplayHello/: CMakeLists.txt  itkDisplayHelloImageIO.h  itkDisplayHelloImageIOFactory.cxx  itkDisplayHelloImageIOFactory.h
ITKImageIODisplayHello/: CMakeLists.txt  itkDisplayHelloImageIO.cxx  itkDisplayHelloImageIOFactory.cxx
ITKMeshIODisplayHello/: CMakeLists.txt  itkDisplayHelloMeshIO.cxx  itkDisplayHelloMeshIO.h  itkDisplayHelloMeshIOFactory.cxx  itkDisplayHelloMeshIOFactory.h
ITKTransformIODisplayHello/: CMakeLists.txt  itkDisplayHelloTransformIO.h  itkDisplayHelloTransformIO.hxx  itkDisplayHelloTransformIOFactory.cxx  itkDisplayHelloTransformIOFactory.h  itkDisplayHelloTransformIOInstantiation.cxx
